Fix saving line breaks when the text is not left aligned

BUG:395769